--- a/dollarsage-app/.env
+++ b/dollarsage-app/.env
@@ -1,2 +1,2 @@
-MONGODB_URL = mongodb+srv://bmka20:8xX5gsfECkpNSEJ7@cluster0.1kfutkn.mongodb.net/?retryWrites=true&w=majority
-
+MONGODB_URL=mongodb+srv://bmka20:8xX5gsfECkpNSEJ7@cluster0.1kfutkn.mongodb.net/?retryWrites=true&w=majority
+NEXTAUTH_SECRET=2iV6du9PJrWuB6HgTik0zYhqEjq6oJk5w0W8GVVrf98=
