--- a/dollarsage-app/package.json
+++ b/dollarsage-app/package.json
@@ -13,14 +13,24 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
-    "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
+    "axios": "^1.5.0",
+    "babel-eslint": "^10.1.0",
+    "bcryptjs": "^2.4.3",
+    "mongodb": "^6.0.0",
     "mongoose": "^7.5.0",
-    "next": "13.4.19",
+    "next": "^13.4.19",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
+    "styled-components": "^6.0.7",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.3",
+    "eslint": "^8.49.0",
+    "eslint-config-next": "^13.4.19"
   }
 }
