--- a/dollarsage-app/package.json
+++ b/dollarsage-app/package.json
@@ -17,6 +17,7 @@
     "babel-eslint": "^10.1.0",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.3.2",
+    "express": "^4.18.2",
     "mongodb": "^6.0.0",
     "mongoose": "^7.5.0",
     "next": "^13.4.19",
